# web-search

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.coolify.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/: dependabot.yml
apps/crawler/: .env.example  Dockerfile  data  pyproject.toml
apps/crawler/src/web_search_crawler/: crawl_task_planner.py  frontier_planner.py  main.py
apps/crawler/src/web_search_crawler/api/: deps.py
apps/crawler/src/web_search_crawler/api/routes/: crawl.py  crawl_attempts.py  frontier.py  health.py  history.py  seeds.py  stats.py  worker.py
apps/crawler/src/web_search_crawler/cli/: enqueue_blocked_robots_urls.py  enqueue_url.py  purge_admission_rejected_urls.py  refill_crawl_frontier.py  repair_canonical_search_urls.py  requeue_blocked_robots_urls.py
apps/crawler/src/web_search_crawler/core/: config.py  crawl_denylist.py  events.py
apps/crawler/src/web_search_crawler/data/: crawl_denylist.yml  url_admission_rules.yml  url_filters.yml
apps/crawler/src/web_search_crawler/db/: __init__.py  connection.py  crawl_queue.py  crawl_schedule.py  crawl_schedule_admission.py  crawler_runtime_store.py  executor.py  url_admin_state.py  url_discovery.py  url_domain_state.py  url_frontier.py  url_ledger.py  url_maintenance.py  url_queries.py  url_retry.py  url_seeds.py  url_store.py  url_types.py
apps/crawler/src/web_search_crawler/domain/: __init__.py
apps/crawler/src/web_search_crawler/models/: __init__.py  crawl.py  frontier.py  history.py  seeds.py  worker.py
apps/crawler/src/web_search_crawler/services/: crawl_frontier_refill.py  crawl_policy.py  crawl_queue_admission.py  crawl_runtime.py  crawl_schedule_admission.py  crawl_scheduling.py  crawl_task_budget.py  direct_crawl.py  feed_processing.py  fetchers.py  frontier.py  frontier_budget.py  html_processing.py  indexer.py  seeds.py  url_admission.py  url_discovery.py  worker.py
apps/crawler/src/web_search_crawler/utils/: __init__.py  history.py  parser.py  robots.py
apps/crawler/src/web_search_crawler/workers/: __init__.py  manager.py  pipeline.py  tasks.py  timing.py  types.py
apps/crawler/tests/: conftest.py  test_api_endpoints.py  test_crawl_denylist.py  test_crawl_frontier_refill.py  test_crawl_policy.py  test_crawl_scheduling.py  test_crawl_task_planner.py  test_db_executor.py  test_fetchers.py  test_frontier_planner.py  test_history_metrics.py  test_indexer_client.py  test_integration.py  test_parser_utils.py  test_pipeline.py  test_query_stats.py  test_robots_cache.py  test_url_admission.py  test_url_filters.py  test_worker_lifecycle.py
apps/frontend/: .env.example  Dockerfile  pyproject.toml
apps/frontend/src/web_search_frontend/: metrics.py
apps/frontend/src/web_search_frontend/api/: deps.py  deps_admin.py  main.py  metrics.py  templates.py
apps/frontend/src/web_search_frontend/api/middleware/: __init__.py  request_logging.py
apps/frontend/src/web_search_frontend/api/routers/: admin.py  admin_crawlers.py  admin_indexer.py  content_api.py  crawler.py  quality.py  search.py  search_api.py  search_index.py  stats.py  system.py  telemetry.py
apps/frontend/src/web_search_frontend/core/: __init__.py  config.py
apps/frontend/src/web_search_frontend/i18n/: __init__.py  messages.py
apps/frontend/src/web_search_frontend/services/: admin_auth.py  admin_cache.py  admin_dashboard.py  analytics.py  api_key.py  crawler_admin_client.py  crawler_instances.py  db_helpers.py  indexer_admin_client.py  search.py  search_index.py  search_opensearch.py  search_query.py  search_ranking_policy.py  search_response.py  shared_json_cache.py
apps/frontend/src/web_search_frontend/templates/: search.html
apps/frontend/src/web_search_frontend/templates/admin/: base.html  crawlers.html  dashboard.html  indexer.html
apps/frontend/src/web_search_frontend/templates/error/: 500.html
apps/frontend/tests/: conftest.py  test_admin_analytics_filters.py  test_admin_auth.py  test_admin_dashboard_cache.py  test_api_extensions.py  test_api_key.py  test_app.py  test_crawler_admin_client.py  test_crawler_instances.py  test_db_helpers.py  test_db_schema.py  test_db_unit.py  test_indexer_admin_client.py  test_metrics_endpoint.py  test_public_content_api.py  test_search_api_advanced.py  test_search_helpers.py  test_search_metrics.py  test_search_modules.py  test_search_ranking_policy.py  test_shared_json_cache.py  test_url_normalization.py
apps/indexer/: .env.example  Dockerfile  README.md  pyproject.toml
apps/indexer/src/web_search_indexer/: main.py  metrics.py  worker.py
apps/indexer/src/web_search_indexer/api/routes/: health.py  indexer.py
apps/indexer/src/web_search_indexer/cli/: backfill_factual_density.py  backfill_opensearch.py  backfill_temporal_anchor.py  calc_pagerank.py  inject_dummy_data.py  rebuild_search_projection.py  verify_opensearch.py
apps/indexer/src/web_search_indexer/core/: config.py
apps/indexer/src/web_search_indexer/services/: dedupe.py  document_indexer.py  index_job_container.py  index_jobs.py  indexer.py  information_origin.py  job_recovery.py  opensearch_document.py  pagerank.py  scoring.py
apps/indexer/tests/: __init__.py  conftest.py  test_api.py  test_backfill_opensearch.py  test_failed_jobs.py  test_index_jobs.py  test_indexer_service.py  test_rebuild_search_projection.py  test_retry_policy.py  test_worker_modes.py
apps/mcp/: README.md  pyproject.toml
apps/mcp/src/paleblue_mcp/: client.py  config.py  server.py
apps/mcp/tests/: conftest.py  test_client.py  test_server.py
config/: canonical_sources.json  search_eval_cases.json
crawler/: .env.example  Dockerfile  requirements.txt
deploy/: Caddyfile.prd  compose.host.yml  compose.prd-data.yml  coolify.staging.env.example
deployment/: .gitignore  README.md
docs/: README.md  api.md  architecture.md  backup.md  content-quality.md  coolify-staging.md  crawler-concepts.md  deployment.md  html-storage.md  implementation_plan.md  product-direction.md  (+6 more)
(+394 files in other folders)
