[project]
name = "web-search-crawler"
version = "0.1.0"
description = "Crawler service for PaleBlueSearch"
requires-python = ">=3.11"
dependencies = [
    "web-search-contracts",
    "web-search-core",
    "web-search-postgres",
    "web-search-web-model",
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.14",
    "cachetools>=6.2",
    "fastapi>=0.128",
    "httpx>=0.28",
    "lxml>=6.1.0",
    "protego>=0.6.0",
    "starlette>=1.3.1",
    "trafilatura>=2.0",
    "uvicorn[standard]>=0.40",
]


[project.scripts]
web-search-enqueue-url = "web_search_crawler.cli.enqueue_url:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web_search_crawler = ["data/*.yml"]
