[project]
name = "paleblue-search-mcp"
version = "0.1.0"
description = "MCP server for PaleBlueSearch"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "mcp>=1.2.0",
    "starlette>=1.0.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
